Revision history for Run-Parts

0.05    TODO

        Fix test skipping numbers in t/basic-functionality.t.

0.04    Wed Jul 10 19:55:57 CEST 2013

        New method concat.

        New helper module Run::Parts::Common.

        Run::Parts::Perl now works properly on DOS-ish platforms

        Some refactoring which pulls in new dependencies.

0.03    Fri Jul  5 21:01:59 CEST 2013

        Run::Parts has been split up into frontend and backend
        modules.

        A pure Perl backend module has been added.

        Run::Parts now can either choose the appropriate backend
        itself or use a given backend.

0.02    Sat  8 Jun 20:04:53 CEST 2013

	Skip functionality tests if /bin/run-parts is not there or not
	executable.

	Add POD encoding to make Test::Pod happy

	State in Build.PL that the test suite needs Test::Differences and
	that Run::Parts itself needs Perl >= 5.10.

        Disable Makefile.PL compatibility.

0.01    Fri  7 Jun 20:26:57 CEST 2013

        Initial release. More or less a proof of concept.