@@ -1,82 +1,0 @@
-Run::Parts
-
-Run::Parts offers functionality of Debian's run-parts tool in Perl.
-
-run-parts runs all the executable files named within constraints
-described below, found in the given directory.  Other files and
-directories are silently ignored.
-
-Additionally it can just print the names of the all matching files
-(not limited to executables, but ignores blacklisted files like
-e.g. backup files), but don't actually run them.
-
-This is useful when functionality or configuration is split over
-multiple files in one directory. A typical convention is that the
-directory name ends in ".d". Common examples for such splittet
-configuration directories:
-
-  /etc/cron.d/
-  /etc/apt/apt.conf.d/
-  /etc/apt/sources.list.d/,
-  /etc/aptitude-robot/pkglist.d/
-  /etc/logrotate.d/
-  /etc/rsyslog.d/
-
-Run::Parts contains two backend implementation. Run::Parts::Debian
-actually uses /bin/run-parts and Run::Parts::Perl is a pure Perl
-implementation of a basic set of run-parts' functionality.
-
-Run::Parts::Debian may or may not work with RedHat's simplified
-shell-script based reimplementation of Debian's run-parts.
-
-By default Run::Parts uses Run::Parts::Debian if /bin/run-parts
-exists, Run::Parts::Perl otherwise. But you can also choose any of the
-backends explicitly.
-
-INSTALLATION
-
-To install this module, run the following commands:
-
-	perl Build.PL
-	./Build
-	./Build test
-	./Build install
-
-
-CODE
-
-You can find a git repository of Run::Parts' code at
-L<https://github.com/xtaran/run-parts>.
-
-
-SUPPORT AND DOCUMENTATION
-
-After installing, you can find documentation for this module with the
-perldoc command.
-
-    perldoc Run::Parts
-
-You can also look for information at:
-
-    RT, CPAN's request tracker (report bugs here)
-        http://rt.cpan.org/NoAuth/Bugs.html?Dist=Run-Parts
-
-    AnnoCPAN, Annotated CPAN documentation
-        http://annocpan.org/dist/Run-Parts
-
-    CPAN Ratings
-        http://cpanratings.perl.org/d/Run-Parts
-
-    Search CPAN
-        http://search.cpan.org/dist/Run-Parts/
-
-
-LICENSE AND COPYRIGHT
-
-Copyright (C) 2013 Axel Beckert
-
-This program is free software; you can redistribute it and/or modify it
-under the terms of either: the GNU General Public License as published
-by the Free Software Foundation; or the Artistic License.
-
-See L<http://dev.perl.org/licenses/> for more information.
