@@ -34,11 +34,6 @@ sub module_boilerplate_ok {
     );
 }
 
-not_in_file_ok(README =>
-    "The README is used..."       => qr/The README is used/,
-    "'version information here'"  => qr/to provide version information/,
-    );
-
 not_in_file_ok(Changes =>
     "placeholder date/time"       => qr(Date/time)
     );
